feat: sync all recent CORS, tunnel, and resilience fixes across directories